<resources>
    <string name="app_name">E-Feels Manager</string>
    <string name="desc">none</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reg_now">Not Registered? Register Now!</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="log_now">Already Registered? Login Now!</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="token">Token</string>
    <string name="new_password">New Password</string>
    <string name="connect">Connect</string>
    <string name="wifi_password">Password</string>
    <string name="scan_wifi">Scan WiFi</string>
    <string name="connect_to_network_device">Connect to Network Device</string>
</resources>
