<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_height"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/desc"
                android:src="@drawable/logo_w" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_marginTop="@dimen/child_margin_top"
                android:textColorHint="#fff">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableEnd="@drawable/ic_action_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingRight="13dp"
                    android:textColor="#fff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_email"
                android:layout_marginTop="@dimen/child_margin_top"
                android:textColorHint="#fff"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#fff" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_password"
                android:layout_marginTop="@dimen/button_margin"
                android:background="#09787C"
                android:drawableEnd="@drawable/ic_action_arrow_forward"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/reg_now"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_register"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/forgot_pass"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:visibility="gone" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>